overflow-x - issue solved 5

--- a/css/menu.css
+++ b/css/menu.css
@@ -5,16 +5,15 @@
 
 body {
     position: relative;
-    /*width: 100%;*/
     z-index: 2;
     /*overflow: hidden;*/
+    /*overflow-x: hidden;*/
+}
+html{
+    position: relative;
+    /*z-index: 2;*/
     overflow-x: hidden;
 }
-/*html{*/
-/*    position: relative;*/
-/*    z-index: 2;*/
-/*    overflow-x: hidden;*/
-/*}*/
 
 /*body::after {*/
 /*    content: "";*/
